# simperby-evm

./: .gitignore  .gitmodules  .prettierignore  .prettierrc.js  README.md  hardhat.config.ts  package-lock.json  package.json
.github/actions/setup/: action.yml
.github/workflows/: checks.yaml
client/: .env  Cargo.toml
client/src/: common.rs  lib.rs
contract/: .env.example  hardhat.config.ts  package-lock.json  package.json
contract/contracts/Treasury/: EVMTreasury.sol
contract/contracts/Treasury/interfaces/: IEVMTreasury.sol
contract/scripts/: _01_deploy_treasury.ts
contract/scripts/misc/: constants.ts
contract/test/: EVMTreasury.test.ts
contract/test/foundry/utils/: TestParameters.sol
contracts/Treasury/: EVMTreasury.sol
scripts/: _01_deploy_mock.ts
scripts/misc/: addresses.ts
src/hardhat/: hardhat.config.ts
src/hardhat/contracts/Treasury/interfaces/: IEVMTreasury.sol
src/hardhat/scripts/: _01_deploy_treasury.ts
test/: EVMTreasury.test.ts
