[package]
name = "simperby-evm-client"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
thiserror = "1.0.32"
rust_decimal = "1.25.0"
simperby-settlement = { git = "https://github.com/postech-dao/simperby" }
simperby-common = { git = "https://github.com/postech-dao/simperby" }
eyre = "0.6.8"
ethers = { version = "1.0.2", features = ["rustls", "openssl", "legacy"]}
ethers-providers = "1.0.2"
ethers-core = "1.0.2"
